fixed header size and spacing

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -21,10 +21,12 @@
 }
 
 .header {
+  
   background-color: $lightBackground1;
   max-width: 100%;
-  padding: 15px 20px;
+  padding: 2px 5px;
   margin: 0px auto;
+  font-size: 1.5em;
 }
 
 .header ul {
@@ -40,7 +42,7 @@
 
 .header li a {
   display: block;
-  padding: 15px 20px;
+  padding: 5px 15px;
   color: $textColor;
   text-decoration: none;
 }
@@ -54,9 +56,9 @@
   display: block;
   flex: none;
   float: left;
-  font-size: 1.5em;
+  font-size: 1.2em;
   text-decoration: none;
-  margin-top: 10px;
+  margin-top: 2px;
   line-height: normal;
 }
 
@@ -65,7 +67,7 @@
   font-weight: bold;
   font-variant-ligatures: no-common-ligatures;
   -webkit-font-variant-ligatures: no-common-ligatures;
-  padding: 0 10px;
+  padding: 0 2px;
 }
 
 /* menu */
@@ -82,7 +84,7 @@
   cursor: pointer;
   display: inline-block;
   float: right;
-  padding: 28px 20px;
+  padding: 14px 0px;
   position: relative;
   user-select: none;
 }
@@ -157,11 +159,21 @@
   top: 0;
 }
 
+.header {
+  font-size: 10px;
+}
+
+.logo-name {
+  font-size: 1.6em;
+  margin-top: 10px;
+}
+
 /* 48em = 768px */
 
 @media (min-width: 48em) {
   .header li {
     float: left;
+    margin-top: 10px;
   }
   .header {
     display: flex;
@@ -174,9 +186,10 @@
   .header .menu-icon {
     display: none;
   }
+  
 }
-@media (max-width: 960px) and (min-width: 768px) {
+@media (min-width: 768px) {
   .header {
-    font-size: 12px;
+    font-size: 0.5em;
   }
 }
